src/objects/Retail_Shop__c.object
<CustomObject>
    <description>Retail Store details</description>
    <fields>
        <fullName>Average_Q1_Income__c</fullName>
        <formula>SUM_of_Q1_Income__c / Outlets_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Q1 Income</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Of_Outlets__c</fullName>
        <description>This Field will be checked if we need to insert specific no of outlets to the retail store</description>
        <label>Count Of Outlets</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_of_Q1_Income__c</fullName>
        <label>Min of Q1 Income</label>
        <summarizedField>Outlet__c.Q1_Income__c</summarizedField>
        <summaryFilterItems>
            <field>Outlet__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Outlet__c.Retail_Shop__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outlets_Count__c</fullName>
        <label>Outlets Count</label>
        <summaryFilterItems>
            <field>Outlet__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Outlet__c.Retail_Shop__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Retail_Shop_Id__c</fullName>
        <displayFormat>RSID-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Retail Shop Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Retail_Shop_Owner__c</fullName>
        <label>Retail Shop Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SUM_of_Q1_Income__c</fullName>
        <label>SUM of Q1 Income</label>
        <summarizedField>Outlet__c.Q1_Income__c</summarizedField>
        <summaryFilterItems>
            <field>Outlet__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Outlet__c.Retail_Shop__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUM_of_Q2_Income__c</fullName>
        <label>SUM of Q2 Income</label>
        <summarizedField>Outlet__c.Q2_Income__c</summarizedField>
        <summaryFilterItems>
            <field>Outlet__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Outlet__c.Retail_Shop__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <globalPicklist>State</globalPicklist>
        <label>State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Retail Shop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>is_Active__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Outlets_Count__c</columns>
        <columns>Retail_Shop_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Retail Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Shops</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>